Compilateur/src/Yaka.jj
/*
 *
 *       Auteur: Pedrono Marie-Jo
 *
 * 	crÃƒÆ’Ã‚Â©ation : 13 fÃƒÆ’Ã‚Â©vrier 2002
 *
 *     nature : projet etudiant
 *
 */
PARSER_BEGIN(Yaka)



public class Yaka {

	static Expression exp = new Expression();
	static Declaration declaration = new Declaration();
	static TabIdent tabIdent = new TabIdent();
	static YVM yvm = new YVM();
	static YVMasm yvmAsm = new YVMasm();
	
	static int taille = 0;
	static String typeAffect,,typeRetourFct;
	static boolean main = false;


	static EtiqUtil ite = new EtiqUtil();
	static EtiqUtil cond = new EtiqUtil();

  public static void main(String args[]) { 
    Yaka analyseur;
    java.io.InputStream input;
	
    if (args.length==1) {
      System.out.print(args[args.length-1] + ": ");
      try {
        input = new java.io.FileInputStream(args[args.length-1]+".yaka");
      } catch (java.io.FileNotFoundException e) {
        System.out.println("Fichier introuvable.");
        return;
      }
    } else if (args.length==0) {
      System.out.println("Lecture sur l'entree standard...");
      input = System.in;
    } else {
      System.out.println("Usage: java Gram [fichier]");
      return;
    }
    try {
      analyseur = new Yaka(input);
      analyseur.analyse();
      System.out.println("analyse syntaxique reussie!");
    } catch (ParseException e) {
      String msg = e.getMessage();
      /*msg = msg.substring(0,msg.indexOf("\n"));*/
      System.out.println("Erreur de syntaxe : "+msg);
    }
  } 
}

PARSER_END(Yaka)
/***************************************/
/********** TOKEN DEFINITIONS **********/
/***************************************/

TOKEN_MGR_DECLS :
{public static String identLu,chaineLue;
 public static int entierLu;}

/*** Skip whitespace and comments ***/
SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| "(*"   : IN_COMMENT
}
<IN_COMMENT> MORE:
{
  < ~[] >
}
<IN_COMMENT> SKIP:
{
   < "*)" >  {SwitchTo(DEFAULT);} 
}


/* Mots rÃƒÆ’Ã‚Â©servÃƒÆ’Ã‚Â©s*/

TOKEN :
{
  < BOOLEEN: "BOOLEEN" >
| < VAR: "VAR" >
| < FAIRE: "FAIRE" >
| < SINON: "SINON" >
| < POUR: "POUR" >
| < SI: "SI" >
| < FSI: "FSI">
| < ENTIER: "ENTIER" >
| < RETOURNE: "RETOURNE" >
| < VRAI: "VRAI" >
| < TANTQUE: "TANTQUE" >
| <CONST : "CONST">
| <FAUX : "FAUX">
| <FAIT : "FAIT">
| <OU : "OU">
| <ET : "ET">
| <NON : "NON">
| <FONCTION : "FONCTION">
| <FFONCTION  : "FFONCTION">
| <PROGRAMME : "PROGRAMME" >
| <FPROGRAMME: "FPROGRAMME" >
| <PRINCIPAL : "PRINCIPAL">
| <FPRINCIPAL : "FPRINCIPAL">
| <ALORS : "ALORS">
| <ECRIRE : "ECRIRE">
| <LIRE : "LIRE">
| <ALALIGNE : "ALALIGNE">


}



/*** unites de base nombres, idents,  strings ***/
TOKEN  :
{
  < #chiffre : ["0"-"9"] >
| < entier : (<chiffre>)+ > 
	{ entierLu = Integer.parseInt(image.toString());
        }
| < #lettre: ["A"-"Z","a"-"z"] >
| < ident : <lettre> (<lettre> | <chiffre>)* >
	{identLu =image.toString();	
	}
| < chaine : "\"" (~["\""])* "\"" | "'" (~["'"])* "'" >
	{ chaineLue = image.toString();
	 }
}


/**************************************/
/********debut de la grammaire ********/
/**************************************/
void analyse() : {}
{

   <PROGRAMME> <ident>	{	yvm.entete(YakaTokenManager.identLu);
   							yvmAsm.entete(YakaTokenManager.identLu);}
   (declFonction())*
   <PRINCIPAL> {main = true;}
   bloc()
   <FPRINCIPAL>
   <FPROGRAMME> { yvm.queue();
   				  yvmAsm.queue();}
}

void bloc() : {}{
 (declConst())*
 (declVar())*	{
 					yvmAsm.ouvrePrinc(taille);
 					yvm.ouvrePrinc(taille);
 				}	
   suiteInstr() 
}

void declConst() : {}
{
  <CONST>  defConst() ( "," defConst())* ";"
}

void defConst() : {}
{
  <ident> {declaration.setSaveName(YakaTokenManager.identLu);}
   "=" valConst()   

}

void valConst() : {}{

  <entier> 	{	
  				if(tabIdent.existeIdentGlob(declaration.getSaveName())){
  					System.out.println("Erreur : Constante dejaÃ‚Â  declaree");
  				}else{
  					tabIdent.rangeIdentGlob(declaration.getSaveName(), declaration.createIdentConst("ENTIER", YakaTokenManager.entierLu));
  				}
  			}
 | <ident>	{	
 				if(tabIdent.existeIdentGlob(declaration.getSaveName())){
  						System.out.println("Erreur : Variable dejaÃ‚Â  declaree");
  				}else{
 					if(tabIdent.existeIdentGlob(YakaTokenManager.identLu)){
 						tabIdent.rangeIdentGlob(declaration.getSaveName(), tabIdent.chercheIdentGlob(YakaTokenManager.identLu));
 					}else System.out.println("Erreur : Variable non dÃƒÂ©clarÃƒÂ©e");
 				}
 			}	
 | <VRAI> 	{
 				if(tabIdent.existeIdentGlob(declaration.getSaveName())){
  					System.out.println("Erreur : Variable dejaÃ‚Â  declaree");
  				}else{
 					tabIdent.rangeIdentGlob(declaration.getSaveName(), declaration.createIdentConst("BOOLEEN", -1));
 				}
 			}	
 | <FAUX> 	{
 				if(tabIdent.existeIdentGlob(declaration.getSaveName())){
  					System.out.println("Erreur : Variable dejaÃ‚Â  declaree");
  				}else{
 					tabIdent.rangeIdentGlob(declaration.getSaveName(), declaration.createIdentConst("BOOLEEN", 0));
 				}	
			}
}


void declVar() : {}
{
  <VAR> type()	
  <ident>		{
  					if(tabIdent.existeIdentGlob(YakaTokenManager.identLu)){
  						System.out.println("Erreur : Variable dejaÃ‚Â  declaree");
  					}else{
  						tabIdent.rangeIdentGlob(YakaTokenManager.identLu, declaration.createIdentVar(declaration.getSaveName()));
  						taille += 2;
  					}
  				}	
  ("," 
      <ident> 	{
					if(tabIdent.existeIdentGlob(YakaTokenManager.identLu)){
  						System.out.println("Erreur : Variable dejaÃ‚Â  declaree");
  					}else{
  						tabIdent.rangeIdentGlob(YakaTokenManager.identLu, declaration.createIdentVar(declaration.getSaveName()));
  						taille +=2;
  					}
				}
  )* ";"
	
}

void type() :{}
{

   <ENTIER> 	{declaration.setSaveName("ENTIER");} 		
 | <BOOLEEN>	{declaration.setSaveName("BOOLEEN");}	

}


/*
 * Syntaxe des instructions.
 */

void suiteInstr() : {}
{ 
(instruction() (";" (instruction())? )*) 
}

void instruction() : {}
{
  affectation()
 |lecture()
 |ecriture()
 |iteration()	
 |conditionnelle()
 |retourne()

}

void affectation() : {}
{

  <ident> 	{	
  				declaration.setSaveName(YakaTokenManager.identLu);
  				if(tabIdent.existeIdentGlob(declaration.getSaveName())){
  					typeAffect = tabIdent.chercheIdentGlob(declaration.getSaveName()).getType();
  				}else{ 
  					System.out.println("Erreur : Variable non dÃ©clarÃ©e");
  				}
  			}
  "=" expression() {
  						if(tabIdent.existeIdentGlob(declaration.getSaveName())){
	  						if(tabIdent.chercheIdentGlob(declaration.getSaveName()) instanceof IdVar){
		  						if(typeAffect.equals(exp.tipToString(exp.popType()))){
		  							yvm.istore(((IdVar)tabIdent.chercheIdentGlob(declaration.getSaveName())).getOffset());
		  							yvmAsm.istore(((IdVar)tabIdent.chercheIdentGlob(declaration.getSaveName())).getOffset());
		  						}else{
		  							System.out.println("erreur de type au niveau de l'affectation");
								}
							}else{
									System.out.println("Erreur : Affectation impossible pour une constante");
							}
						}
					}
}

void lecture() : {}
{
  <LIRE> "(" <ident> {
  						if(tabIdent.existeIdentGlob(YakaTokenManager.identLu)){
	  						yvm.lireEnt(((IdVar)tabIdent.chercheIdentGlob(YakaTokenManager.identLu)).getOffset());
	  						yvmAsm.lireEnt(((IdVar)tabIdent.chercheIdentGlob(YakaTokenManager.identLu)).getOffset());
	  					}else{
	  						System.out.println("Erreur : Variable non dÃ©clarÃ©e");
	  					}
  					  }
  ")" 
}

void ecriture() : {}
{
  <ECRIRE> "(" (expression() {
  								yvm.ecrireEnt();
  								yvmAsm.ecrireEnt();
  							 } 
  							
  | <chaine>				{
  								yvm.ecrireChaine(YakaTokenManager.chaineLue);
  								yvmAsm.ecrireChaine(YakaTokenManager.chaineLue);
  							}
  
  ) ")"  
  		| <ALALIGNE>		{
   								yvm.aLaLigne();
   								yvmAsm.aLaLigne();
   							}
}


void iteration() : {}
{
	<TANTQUE> {	ite.push();
				yvm.faire(ite.peek());
				yvmAsm.faire(ite.peek());
			  }
	expression() {
					if (!(exp.tipToString(exp.popType()).equals("BOOLEEN"))){
						System.out.println("Une expression boolÃ©enne est attendu");
					}else{
						yvm.iffaux("FAIT"+ite.peek());
						yvmAsm.iffaux("FAIT"+ite.peek());
					}
					
				 }
	<FAIRE>
		suiteInstr()
	<FAIT> {
			yvm.jump("FAIRE"+ite.peek());
			yvmAsm.jump("FAIRE"+ite.peek());
			yvm.fait(ite.peek());
			yvmAsm.fait(ite.pop());
		   }
}



void conditionnelle() : {}
{
	 
	<SI> expression() { 
							if (!(exp.tipToString(exp.popType()).equals("BOOLEEN"))){
							System.out.println("Une expression boolÃ©enne est attendu");
							}
							
							cond.push();
							yvm.iffaux("SINON"+cond.peek());
							yvmAsm.iffaux("SINON"+cond.peek());
						}
	<ALORS> suiteInstr(){
							yvm.jump("FSI"+cond.peek());
							yvmAsm.jump("FSI"+cond.peek());
							
							 yvm.sinon(cond.peek());
			  				yvmAsm.sinon(cond.peek());
						}
	( <SINON> suiteInstr() )?
	<FSI> { 
			yvm.fsi(cond.peek());
			yvmAsm.fsi(cond.pop());	
		  }
		  
}


/*
 * Expression .
 */
void expression() : {}
{
  simpleExpr() 
  (opRel()
  simpleExpr() {
  				Expression.Op o = exp.peekOpera();
	   			switch(o){
	   				case EGAL :
	   					yvm.iegal();
	   					yvmAsm.iegal();
	   					break;
	   				case DIFF :
	   					yvm.idiff();
	   					yvmAsm.idiff();
	   					break;
	   				case INF :
	   					yvm.iinf();
	   					yvmAsm.iinf();
	   					break;
	   				case INFEGAL :
	   					yvm.iinfegal();
	   					yvmAsm.iinfegal();
	   					break;
	   				case SUP :
	   					yvm.isup();
	   					yvmAsm.isup();
	   					break;
	   				case SUPEGAL :
	   					yvm.isupegal();
	   					yvmAsm.isupegal();
	   					break;
	   				default :
	   			}
  				exp.testType2Argv();
  				}

  )?
}



void simpleExpr() : {}
{
   terme() 
   (opAdd()
   terme() {
   			Expression.Op o = exp.peekOpera();
   			switch(o){
   				case PLUS :
   					yvm.iadd();
   					yvmAsm.iadd();
   					break;
   				case MOINS :
   					yvm.isub();
   					yvmAsm.isub();
   					break;
   				case OU :
   					yvm.ior();
   					yvmAsm.ior();
   					break;
   				default :
   			}
   			exp.testType2Argv();
   			}

   )*
} 
void terme() : {}
{
  facteur() 
  (opMul()
  facteur()	{
  			Expression.Op o = exp.peekOpera();
   			switch(o){
   				case MUL :
   					yvm.imul();
   					yvmAsm.imul();
   					break;
   				case DIV :
   					yvm.idiv();
   					yvmAsm.idiv();
   					break;
   				case ET :
   					yvm.iand();
   					yvmAsm.iand();
   					break;
   				default :
   			}
  			exp.testType2Argv();
  			}

  )*
}
void facteur() : {}
{   primaire() 
  |  opNeg() primaire() {
  						Expression.Op o = exp.peekOpera();
			   			switch(o){
			   				case NON :
			   					yvm.inot();
			   					yvmAsm.inot();
			   					break;
			   				case MOINS :
			   					yvm.ineg();
			   					yvmAsm.ineg();
			   					break;
			   				default :
			   			}
  						exp.testType1Argv();
  						} 
}

void primaire (): {}
{
   valeur()
 | "(" expression() ")" 
 
}

void valeur () : {}

{ <entier> 	{	
				exp.saveType(Expression.Tip.ENTIER);
				yvm.iconst(YakaTokenManager.entierLu);
				yvmAsm.iconst(YakaTokenManager.entierLu);
			} 		
 | <ident>  {declaration.setSaveName(YakaTokenManager.identLu);}
  (argumentsFonction())?	{
 				// TODO : Partie a modifié pour coller aux fonctions
 				if(tabIdent.existeIdentGlob(YakaTokenManager.identLu)){
	 				exp.saveType(exp.stringToTip(tabIdent.chercheIdentGlob(YakaTokenManager.identLu).getType()));
	 				if(tabIdent.chercheIdentGlob(YakaTokenManager.identLu) instanceof IdConst){
	 					yvm.iconst(((IdConst) tabIdent.chercheIdentGlob(YakaTokenManager.identLu)).getValeur());
	 					yvmAsm.iconst(((IdConst) tabIdent.chercheIdentGlob(YakaTokenManager.identLu)).getValeur());
	 				}else{
	 					yvm.iload(((IdVar) tabIdent.chercheIdentGlob(YakaTokenManager.identLu)).getOffset());
	 					yvmAsm.iload(((IdVar) tabIdent.chercheIdentGlob(YakaTokenManager.identLu)).getOffset());
	 				}
	 			}else System.out.println("Erreur : Variable non dÃ©clarÃ©e");
 			}	
 | <VRAI> 	{	
 				exp.saveType(Expression.Tip.BOOL);
 				yvm.iconst(-1);
				yvmAsm.iconst(-1);
 			} 
 | <FAUX> 	{	
 				exp.saveType(Expression.Tip.BOOL);
 				yvm.iconst(0);
				yvmAsm.iconst(0);
 			} 

 
}

void opRel() : {}
{

   "=" 		{exp.saveOp(Expression.Op.EGAL);}
 | "<>" 	{exp.saveOp(Expression.Op.DIFF);}
 | "<" 		{exp.saveOp(Expression.Op.INF);}
 | "<=" 	{exp.saveOp(Expression.Op.INFEGAL);}
 | ">" 		{exp.saveOp(Expression.Op.SUP);}
 | ">=" 	{exp.saveOp(Expression.Op.SUPEGAL);}

} 

void opAdd() : {}
{

    "+"	 {exp.saveOp(Expression.Op.PLUS);}	
  |  "-" {exp.saveOp(Expression.Op.MOINS);}	
  | <OU> {exp.saveOp(Expression.Op.OU);}	

}

void opMul() : {}
{

  "*"	{exp.saveOp(Expression.Op.MUL);}	
  | "/"	{exp.saveOp(Expression.Op.DIV);}	
  | <ET> {exp.saveOp(Expression.Op.ET);}	

} 

void opNeg() : {}
{ 
 "-" 		{exp.saveOp(Expression.Op.MOINS);}	
 | <NON>	{exp.saveOp(Expression.Op.NON);}
}


void declFonction() : {}
{
	type()
	<FONCTION> {typeRetourFct = declaration.getSaveName();}
	<ident>
	paramForms()
	bloc()
	<FFONCTION>
}

void paramForms() : {}
{
	"(" (paramForm() ( ","paramForm() )* )? ")"
	
}


void paramForm() : {}
{
	type() <ident>{
	  			if(tabIdent.existeIdentLoc(YakaTokenManager.identLu)){
	  				System.out.println("Erreur : Variable dejaÃ‚Â  declaree");
	  			}else{
	  				tabIdent.rangeIdentLoc(YakaTokenManager.identLu, declaration.createIdentVar(declaration.getSaveName()));
	  				IdFonc.addParam(declaration.getSaveName());
	  				
	  			}
	  		}	
}

void retourne() : {}
{
	<RETOURNE> {	
					if (main == true){
						System.out.println("Erreur, impossible de retourner une valeur dans le programme principal");
					}
			   }
	expression(){
								
			if(!typeRetourFct.equals(exp.tipToString(exp.popType()))){
								
		  		System.out.println("erreur de type au niveau du retour de la fonction");
			}
						
	
		}
}

void argumentsFonction() : {}
{
	"("	{int nbArg = ((IdFonc)tabIdent.chercheIdentGlob(declaration.getSaveName())).getNbParam();}
		(expression() {nbArg--;}
			(
				"," 
				expression(){nbArg--;}
			)*
		)? 
	")" {	if(nbArg > 0){
				System.out.println("Erreur dans le nombre de parametre entrer a la ligne : "+YakaTokenManager.jjFillToken().beginLine+
								   "."+nbArg+" arguments attendus en plus.");
			}else if(nbArg<0){
				System.out.println("Erreur dans le nombre de parametre entrer a la ligne : "+YakaTokenManager.jjFillToken().beginLine+
								   "."+(-nbArg)+" arguments attendus en moins.");
			}
		}
}
