Compilateur/src/Yaka.java
/* Generated By:JavaCC: Do not edit this line. Yaka.java */
public class Yaka implements YakaConstants {

        static Expression exp = new Expression();
        static Declaration declaration = new Declaration();
        static TabIdent tabIdent = new TabIdent();
        static YVM yvm = new YVM();
        static YVMasm yvmAsm = new YVMasm();

        static int taille = 0;
        static String typeAffect;


        static EtiqUtil ite = new EtiqUtil();
        static EtiqUtil cond = new EtiqUtil();

  public static void main(String args[]) {
    Yaka analyseur;
    java.io.InputStream input;

    if (args.length==1) {
      System.out.print(args[args.length-1] + ": ");
      try {
        input = new java.io.FileInputStream(args[args.length-1]+".yaka");
      } catch (java.io.FileNotFoundException e) {
        System.out.println("Fichier introuvable.");
        return;
      }
    } else if (args.length==0) {
      System.out.println("Lecture sur l'entree standard...");
      input = System.in;
    } else {
      System.out.println("Usage: java Gram [fichier]");
      return;
    }
    try {
      analyseur = new Yaka(input);
      analyseur.analyse();
      System.out.println("analyse syntaxique reussie!");
    } catch (ParseException e) {
      String msg = e.getMessage();
      /*msg = msg.substring(0,msg.indexOf("\n"));*/
      System.out.println("Erreur de syntaxe : "+msg);
    }
  }

/**************************************/
/********debut de la grammaire ********/
/**************************************/
  static final public void analyse() throws ParseException {
    jj_consume_token(PROGRAMME);
    jj_consume_token(ident);
                                yvm.entete(YakaTokenManager.identLu);
                                                        yvmAsm.entete(YakaTokenManager.identLu);
    bloc();
    jj_consume_token(FPROGRAMME);
                  yvm.queue();
                                  yvmAsm.queue();
  }

  static final public void bloc() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declConst();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      declVar();
    }
                                        yvmAsm.ouvrePrinc(taille);
                                        yvm.ouvrePrinc(taille);
    suiteInstr();
  }

  static final public void declConst() throws ParseException {
    jj_consume_token(CONST);
    defConst();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 40:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(40);
      defConst();
    }
    jj_consume_token(41);
  }

  static final public void defConst() throws ParseException {
    jj_consume_token(ident);
           declaration.setSaveName(YakaTokenManager.identLu);
    jj_consume_token(42);
    valConst();
  }

  static final public void valConst() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case entier:
      jj_consume_token(entier);
                                if(tabIdent.existeIdent(declaration.getSaveName())){
                                        System.out.println("Erreur : Constante deja\u00c2\u00a0 declaree");
                                }else{
                                        tabIdent.rangeIdent(declaration.getSaveName(), declaration.createIdentConst("ENTIER", YakaTokenManager.entierLu));
                                }
      break;
    case ident:
      jj_consume_token(ident);
                                if(tabIdent.existeIdent(declaration.getSaveName())){
                                                System.out.println("Erreur : Variable deja\u00c2\u00a0 declaree");
                                }else{
                                        if(tabIdent.existeIdent(YakaTokenManager.identLu)){
                                                tabIdent.rangeIdent(declaration.getSaveName(), tabIdent.chercheIdent(YakaTokenManager.identLu));
                                        }else System.out.println("Erreur : Variable non d\u00c3\u00a9clar\u00c3\u00a9e");
                                }
      break;
    case VRAI:
      jj_consume_token(VRAI);
                                if(tabIdent.existeIdent(declaration.getSaveName())){
                                        System.out.println("Erreur : Variable deja\u00c2\u00a0 declaree");
                                }else{
                                        tabIdent.rangeIdent(declaration.getSaveName(), declaration.createIdentConst("BOOLEEN", -1));
                                }
      break;
    case FAUX:
      jj_consume_token(FAUX);
                                if(tabIdent.existeIdent(declaration.getSaveName())){
                                        System.out.println("Erreur : Variable deja\u00c2\u00a0 declaree");
                                }else{
                                        tabIdent.rangeIdent(declaration.getSaveName(), declaration.createIdentConst("BOOLEEN", 0));
                                }
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declVar() throws ParseException {
    jj_consume_token(VAR);
    type();
    jj_consume_token(ident);
                                        if(tabIdent.existeIdent(YakaTokenManager.identLu)){
                                                System.out.println("Erreur : Variable deja\u00c2\u00a0 declaree");
                                        }else{
                                                tabIdent.rangeIdent(YakaTokenManager.identLu, declaration.createIdentVar(declaration.getSaveName()));
                                                taille += 2;
                                        }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 40:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(40);
      jj_consume_token(ident);
                                        if(tabIdent.existeIdent(YakaTokenManager.identLu)){
                                                System.out.println("Erreur : Variable deja\u00c2\u00a0 declaree");
                                        }else{
                                                tabIdent.rangeIdent(YakaTokenManager.identLu, declaration.createIdentVar(declaration.getSaveName()));
                                                taille +=2;
                                        }
    }
    jj_consume_token(41);
  }

  static final public void type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENTIER:
      jj_consume_token(ENTIER);
                 declaration.setSaveName("ENTIER");
      break;
    case BOOLEEN:
      jj_consume_token(BOOLEEN);
                 declaration.setSaveName("BOOLEEN");
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*
 * Syntaxe des instructions.
 */
  static final public void suiteInstr() throws ParseException {
    instruction();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      jj_consume_token(41);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SI:
      case TANTQUE:
      case ECRIRE:
      case LIRE:
      case ALALIGNE:
      case ident:
        instruction();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    }
  }

  static final public void instruction() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ident:
      affectation();
      break;
    case LIRE:
      lecture();
      break;
    case ECRIRE:
    case ALALIGNE:
      ecriture();
      break;
    case TANTQUE:
      iteration();
      break;
    case SI:
      conditionnelle();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void affectation() throws ParseException {
    jj_consume_token(ident);
                                declaration.setSaveName(YakaTokenManager.identLu);
                                if(tabIdent.existeIdent(declaration.getSaveName())){
                                        typeAffect = tabIdent.chercheIdent(declaration.getSaveName()).getType();
                                }else{
                                        System.out.println("Erreur : Variable non d\u00e9clar\u00e9e");
                                }
    jj_consume_token(42);
    expression();
                                                if(tabIdent.existeIdent(declaration.getSaveName())){
                                                        if(tabIdent.chercheIdent(declaration.getSaveName()) instanceof IdVar){
                                                                if(typeAffect.equals(exp.tipToString(exp.popType()))){
                                                                        yvm.istore(((IdVar)tabIdent.chercheIdent(declaration.getSaveName())).getOffset());
                                                                        yvmAsm.istore(((IdVar)tabIdent.chercheIdent(declaration.getSaveName())).getOffset());
                                                                }else{
                                                                        System.out.println("erreur de type au niveau de l'affectation");
                                                                }
                                                        }else{
                                                                        System.out.println("Erreur : Affectation impossible pour une constante");
                                                        }
                                                }
  }

  static final public void lecture() throws ParseException {
    jj_consume_token(LIRE);
    jj_consume_token(43);
    jj_consume_token(ident);
                                                if(tabIdent.existeIdent(YakaTokenManager.identLu)){
                                                        yvm.lireEnt(((IdVar)tabIdent.chercheIdent(YakaTokenManager.identLu)).getOffset());
                                                        yvmAsm.lireEnt(((IdVar)tabIdent.chercheIdent(YakaTokenManager.identLu)).getOffset());
                                                }else{
                                                        System.out.println("Erreur : Variable non d\u00e9clar\u00e9e");
                                                }
    jj_consume_token(44);
  }

  static final public void ecriture() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ECRIRE:
      jj_consume_token(ECRIRE);
      jj_consume_token(43);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VRAI:
      case FAUX:
      case NON:
      case entier:
      case ident:
      case 43:
      case 51:
        expression();
                                                                yvm.ecrireEnt();
                                                                yvmAsm.ecrireEnt();
        break;
      case chaine:
        jj_consume_token(chaine);
                                                                yvm.ecrireChaine(YakaTokenManager.chaineLue);
                                                                yvmAsm.ecrireChaine(YakaTokenManager.chaineLue);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(44);
      break;
    case ALALIGNE:
      jj_consume_token(ALALIGNE);
                                                                yvm.aLaLigne();
                                                                yvmAsm.aLaLigne();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void iteration() throws ParseException {
    jj_consume_token(TANTQUE);
                        ite.push();
                                yvm.faire(ite.peek());
                                yvmAsm.faire(ite.peek());
    expression();
                                        if (!(exp.tipToString(exp.popType()).equals("BOOLEEN"))){
                                                System.out.println("Une expression bool\u00e9enne est attendu");
                                        }else{
                                                yvm.iffaux("FAIT"+ite.peek());
                                                yvmAsm.iffaux("FAIT"+ite.peek());
                                        }
    jj_consume_token(FAIRE);
    suiteInstr();
    jj_consume_token(FAIT);
                        yvm.jump("FAIRE"+ite.peek());
                        yvmAsm.jump("FAIRE"+ite.peek());
                        yvm.fait(ite.peek());
                        yvmAsm.fait(ite.pop());
  }

  static final public void conditionnelle() throws ParseException {
    jj_consume_token(SI);
    expression();
                                                        if (!(exp.tipToString(exp.popType()).equals("BOOLEEN"))){
                                                        System.out.println("Une expression bool\u00e9enne est attendu");
                                                        }

                                                        cond.push();
                                                        yvm.iffaux("SINON"+cond.peek());
                                                        yvmAsm.iffaux("SINON"+cond.peek());
    jj_consume_token(ALORS);
    suiteInstr();
                                                        yvm.jump("FSI"+cond.peek());
                                                        yvmAsm.jump("FSI"+cond.peek());

                                                         yvm.sinon(cond.peek());
                                                        yvmAsm.sinon(cond.peek());
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SINON:
      jj_consume_token(SINON);
      suiteInstr();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(FSI);
                        yvm.fsi(cond.peek());
                        yvmAsm.fsi(cond.pop());
    jj_consume_token(41);
  }

/*
 * Expression .
 */
  static final public void expression() throws ParseException {
    simpleExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
    case 45:
    case 46:
    case 47:
    case 48:
    case 49:
      opRel();
      simpleExpr();
                                Expression.Op o = exp.peekOpera();
                                switch(o){
                                        case EGAL :
                                                yvm.iegal();
                                                yvmAsm.iegal();
                                                break;
                                        case DIFF :
                                                yvm.idiff();
                                                yvmAsm.idiff();
                                                break;
                                        case INF :
                                                yvm.iinf();
                                                yvmAsm.iinf();
                                                break;
                                        case INFEGAL :
                                                yvm.iinfegal();
                                                yvmAsm.iinfegal();
                                                break;
                                        case SUP :
                                                yvm.isup();
                                                yvmAsm.isup();
                                                break;
                                        case SUPEGAL :
                                                yvm.isupegal();
                                                yvmAsm.isupegal();
                                                break;
                                        default :
                                }
                                exp.testType2Argv();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  static final public void simpleExpr() throws ParseException {
    terme();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OU:
      case 50:
      case 51:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      opAdd();
      terme();
                        Expression.Op o = exp.peekOpera();
                        switch(o){
                                case PLUS :
                                        yvm.iadd();
                                        yvmAsm.iadd();
                                        break;
                                case MOINS :
                                        yvm.isub();
                                        yvmAsm.isub();
                                        break;
                                case OU :
                                        yvm.ior();
                                        yvmAsm.ior();
                                        break;
                                default :
                        }
                        exp.testType2Argv();
    }
  }

  static final public void terme() throws ParseException {
    facteur();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ET:
      case 52:
      case 53:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      opMul();
      facteur();
                        Expression.Op o = exp.peekOpera();
                        switch(o){
                                case MUL :
                                        yvm.imul();
                                        yvmAsm.imul();
                                        break;
                                case DIV :
                                        yvm.idiv();
                                        yvmAsm.idiv();
                                        break;
                                case ET :
                                        yvm.iand();
                                        yvmAsm.iand();
                                        break;
                                default :
                        }
                        exp.testType2Argv();
    }
  }
